--- a/package.json
+++ b/package.json
@@ -13,7 +13,19 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^4.1.0",
+    "react-navigation-stack": "^2.1.0",
+    "stream-chat-expo": "^1.3.1",
+    "@react-native-community/netinfo": "5.9.6",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-screens": "~2.10.1",
+    "react-native-safe-area-context": "3.1.4",
+    "@react-native-community/masked-view": "0.1.10",
+    "expo-permissions": "~9.3.0",
+    "expo-image-picker": "~9.1.0",
+    "expo-document-picker": "~8.4.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
